create image animation

--- a/css/color-mode.css
+++ b/css/color-mode.css
@@ -3,4 +3,7 @@
 :root{
     /* colors */
     --bg: #ffffff;
+
+    /* face animation */
+    --tl-1: url(../assets/face-animation-light/tl-1.png);
 }
