--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,44 @@ body{
     background: var(--bg);
     color: var(--text);
     height: 100%;
+    width: 100%;
+    margin: 0;
+    -webkit-tap-highlight-color: transparent;
+}
+
+h1,h2,h5,p{
+    margin: 0;
+}
+
+.icon{
+    height: 2rem;
+    width: 2rem;
+    margin: 0 0.5rem;
+}
+
+/* HERO */
+#hero{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+#hero_animation{
+    animation-name: hover;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    height: 25rem;
+    width: 25rem;
+    max-height: 100vh;
+    max-width: 100vw;
+}
+
+#hero_animation_img{
+    background-image: var(--tl-1);
+    height: 100%;
+    background-position: center;
+    background-size: cover;
 }
