top left animation finish up

--- a/css/animation.css
+++ b/css/animation.css
@@ -1,3 +1,12 @@
+/* General animation settings */
+.animate-top-left,
+.remove-animate-top-left{
+     animation-fill-mode: forwards;
+     animation-duration: 0.2s;
+     animation-iteration-count: 1;
+     animation-timing-function: ease-in-out;
+}
+
 /* Hover Animation */
 
 @keyframes hover{
@@ -12,3 +21,50 @@
 
     }
 }
+/* Animate top left */
+.animate-top-left{
+     animation-name: top-left;
+
+}
+
+.remove-animate-top-left{
+     animation-name: reverse-top-left;
+}
+
+@keyframes top-left{
+     0%{
+          background-image: var(--tl-1);
+      }
+     25%{
+          background-image: var(--tl-2);
+     }
+     50%{
+          background-image: var(--tl-3);
+     }
+     75%{
+          background-image: var(--tl-4);
+     }
+     100%{
+          background-image: var(--tl-5);
+     
+     }
+ }
+
+ @keyframes reverse-top-left{
+     0%{
+          background-image: var(--tl-5);
+      }
+     25%{
+          background-image: var(--tl-4);
+     }
+     50%{
+          background-image: var(--tl-3);
+     }
+     75%{
+          background-image: var(--tl-2);
+     }
+     100%{
+          background-image: var(--tl-1);
+     
+     }
+ }
