complete bottom left animation

--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ article p{
     background-origin: 15vh;
     bottom: 15vh;
     left: 0;
-    /* transform: translateX(-100vw) translateY(100vh); */
+    transform: translateX(-100vw) translateY(100vh);
 }
 
 .project{
