--- a/css/style.css
+++ b/css/style.css
@@ -260,7 +260,7 @@ article p{
 .project_title{
     width: 100%;
     margin: 0;
-    padding: 0.3rem;
+    padding: 0.3rem 0;
     font-size: 1rem;
 }
 
